[project]
name = "subimage-outpost"
version = "0.1.0"
description = "HTTP proxy with bearer token authentication"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest>=8.0.0",
]
